# fastapi-task-manager

./: .gitignore  README.md  Task_Manager_API.postman_collection.json  pyproject.toml
app/: config.py  database.py  dependencies.py  main.py  middleware.py  schemas.py
app/auth/: dependencies.py  router.py  schemas.py  service.py
app/models/: project.py  task.py  user.py
app/routers/: health.py  project.py  task.py
app/schemas/: __init__.py  project.py  task.py
app/services/: email_service.py
templates/: created_project.html  welcome_email.html
